--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^4.0.7",
+    "@vitest/ui": "^4.0.7",
     "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.17",
     "cypress": "^13.6.0",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4",
-    "vitest": "^1.0.4",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.0.4"
+    "vite": "^7.2.0",
+    "vitest": "^4.0.7"
   }
 }
